# graph-sentinel

./: .gitignore  .pre-commit-config.yaml  README.md  architecture.md  docker-compose.yml  pyproject.toml
src/: __init__.py  cli.py
src/api/: app.py  schemas.py
src/api/routes/: alerts.py  health.py  scoring.py  simulation.py
src/config/: __init__.py  settings.py
src/explainability/: __init__.py  decomposition.py  reports.py
src/features/: __init__.py  behavioral.py  fraud_specific.py  pipeline.py  structural.py
src/fraud/: __init__.py  engine.py  labels.py
src/fraud/patterns/: __init__.py  base.py  circular.py  device_sharing.py  dormant.py  funnel.py  layering.py
src/graph/: __init__.py  builder.py  neo4j_store.py  temporal.py
src/graph_learning/: __init__.py  embeddings.py  model.py
src/ingestion/: __init__.py  pipeline.py  schema.py
src/monitoring/: __init__.py  alerts.py  drift.py  graph_drift.py  prediction_drift.py
src/propagation/: __init__.py  engine.py
src/scoring/: __init__.py  aggregator.py  calibration.py  meta_model.py  risk_engine.py
src/sequence/: __init__.py  builder.py  encoder.py
src/simulation/: __init__.py  accounts.py  behavioral.py  orchestrator.py  transactions.py  validator.py
src/storage/: __init__.py  postgres.py  redis_cache.py
src/training/: __init__.py  data_split.py  evaluation.py  supervised.py  unsupervised.py
src/visualization/: __init__.py  clusters.py  graphs.py  reports.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_features/: test_pipeline.py
tests/test_fraud/: test_engine.py
tests/test_graph/: test_builder.py
tests/test_graph_learning/: test_embeddings.py
tests/test_monitoring/: test_drift.py
tests/test_propagation/: test_engine.py
tests/test_scoring/: test_meta_and_calibration.py  test_risk_engine.py
tests/test_sequence/: test_sequence.py
tests/test_simulation/: test_accounts.py  test_transactions.py
